# Proj-Eye

./: .gitignore  CLAUDE.md  README.md  document-version1.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.claude/: settings.local.json
docs/: PR2-workspace-node-abstraction.md  PR4-ai-context-unification.md  README.md  TODO-OxideTerm-Features.md  next-steps.md  quick-reference.md  task-checklist.md  week1-summary.md
docs/refactor/: MONTH1-SUMMARY.md  PR10-Session-Lifecycle.md  PR11-Auto-Reconnect.md  PR12-Health-Check.md  PR18-Grace-Period-Reconnect.md  PR19-Implementation-Summary.md  PR19-PR20-Status.md  PR19-Terminal-Multiplexer.md  PR19-Testing-Checklist.md  PR20-SFTP-File-Manager.md  (+7 more)
scripts/: run-cargo-windows.ps1  run-tauri-windows.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: README.md  ai.rs  app.rs  config.rs  connection.rs  connection_pool.rs  database.rs  diagnostics.rs  health_check.rs  logs.rs  mod.rs  prewarm.rs  reconnect.rs  secure.rs  session_lifecycle.rs  sftp.rs  snapshot.rs  ssh.rs  terminal.rs  workspace.rs
src-tauri/src/runtime/: connection_pool.rs  connection_runtime.rs  health_check.rs  mod.rs  prewarm.rs  reconnect.rs  reconnect_snapshot.rs  session_lifecycle.rs  session_registry.rs  sftp.rs  terminal.rs  ws_server.rs
src-tauri/src/store/: config.rs  diagnostics.rs  mod.rs  runtime.rs  secure.rs  workspace_nodes.rs
(+123 files in other folders)
