[package]
name = "proj-eye"
version = "0.1.0"
description = "Project-first AI operations desktop app"
authors = ["Proj-Eye"]
edition = "2021"
default-run = "proj-eye"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proj_eye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mysql = { version = "28", default-features = false, features = ["default-rust"] }
redis = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
portable-pty = "0.9.0"
